--- a/Frontend/styles.css
+++ b/Frontend/styles.css
@@ -26,6 +26,7 @@ body {
     align-items: center;
     font-size: 28px;
     font-weight: 600;
+    
 }
 
 .logo img {
@@ -38,6 +39,8 @@ body {
     list-style: none;
     display: flex;
     gap: 30px;
+    padding-right: 200px;
+    
 }
 
 .menu li a {
@@ -115,6 +118,7 @@ body {
     max-width: 280px;
     text-align: center;
     transition: transform 0.3s ease-in-out;
+    
 }
 
 .feature:hover {
@@ -187,6 +191,7 @@ footer a:hover {
     justify-content: center;
     gap: 15px;
     margin-top: 10px;
+    transition: transform 0.3s ease-in-out;
 }
 
 .social-icons img {
@@ -214,6 +219,7 @@ footer a:hover {
     background-color: #2f2d2d;
     color: white;
     margin: 0;
+    animation: fadeIn 1s ease-in-out;
 }
 
 /* Contenedor del formulario más grande */
@@ -331,6 +337,7 @@ footer a:hover {
     justify-content: center;
     align-items: center;
     height: 100vh;
+    animation: fadeIn 1s ease-in-out;
 }
 
 .register-container {
@@ -424,4 +431,94 @@ footer a:hover {
     }
 }
 
+
+
+
+
+
+
+
+
+/* Pagina Bienvenida*/
+
+.tittle-welcome h2 {
+    justify-content: center;
+    font-size: 38px;
+    font-weight: 700;
+    margin-bottom: 10px;
+    animation: fadeIn 1s ease-in-out;
+    padding-top: 90px;
+    padding-bottom: 20px;
+}
+
+/* Cuadrícula oculta por defecto */
+.contenedor-cuadricula {
+    display: none; /* Inicialmente oculto */
+    grid-template-columns: repeat(10, 50px); /* 10 columnas de 50px */
+    grid-gap: 10px;
+    margin-top: 20px;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    position: relative;
+    left: 50%;
+    transform: translate(-50%);
+}
+
+/* Clase para mostrar la cuadrícula */
+.contenedor-cuadricula.visible {
+    display: grid; /* Muestra la cuadrícula */
+}
+
+/* Estilos para cada celda de la cuadrícula */
+.celda {
+    width: 50px;
+    height: 50px;
+    background-color: #050505;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #e66b00;
+}
+.celda:hover{
+    background-color: #e66b00;
+    border-color: #ffffff;
+}
+
+/* Estilos para la ventana emergente */
+.ventana {
+    display: none; /* Oculta la ventana por defecto */
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5); /* Fondo semi-transparente */
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.contenido-ventana {
+    background-color: #050505;
+    padding: 20px;
+    border-radius: 8px;
+    text-align: center;
+    width: 300px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+button {
+    padding: 10px 20px;
+    margin-top: 20px;
+    border: none;
+    background-color: #007bff;
+    color: white;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+button:hover {
+    background-color: #0056b3;
+}
 
