--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 /* Estilos generales */
 body {
+    padding-bottom: 100px;
     font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
@@ -158,8 +159,9 @@ footer {
     text-align: center;
     padding: 20px 15px;
     font-size: 14px;
-    margin-top: 30px;
     border-top: 2px solid #ff7f50; /* Línea de color naranja para destacar */
+    margin-top: 50px; /* Ajustar el margen superior si es necesario */
+    padding-bottom: 20px; /* Asegura que haya espacio por debajo */
 }
 
 /* Estilos para los párrafos dentro del footer */
