--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,10 @@ body {
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 }
 
+.cerrar{
+    padding: 0%;
+}
+
 /* Logo */
 .logo {
     display: flex;
